<resources>
    <string name="app_name">PetSpace</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_update_password">UpdatePassword</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email_hint">email_hint</string>
    <string name="get_password_link">get_password_link</string>
    <string name="back">back</string>
    <string name="update_pass">update_pass</string>
    <string name="password_hint">password_hint</string>
    <string name="new_password">new_password</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="button">Button</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register!</string>
    <string name="or_login_with">Or login with</string>
    <string name="email">Email</string>
    <string name="update_password">Update Password</string>
    <string name="enter_a_valid_e_mail_address">Enter a valid e-mail address.</string>
    <string name="enter_a_valid_password">Enter a valid password.</string>
    <string name="enter_a_new_password">Enter a New Password</string>
    <string name="or">OR</string>
    <string name="petspace_home">PetSpace Home</string>
    <string name="edit">edit</string>
    <string name="delete">del</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="logout">Log Out</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="none">none</string>
    <string name="find_pet_friends">Find Pet Friends</string>
    <string name="messages">Messages</string>
    <string name="find_pets">Find Pet Friends</string>
    <string name="new_post">New Post</string>
    <string name="text_color">Text Color</string>
    <string name="mainmenu">main_menu</string>
    <string name="main_menu">main_menu_nav</string>
    <string name="enter_the_e_mail_address_associated_with_your_account">Enter the e-mail address associated with your account</string>
    <string name="enter_email">Enter Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_address">Email Address</string>
    <string name="enter_e_mail_address">Enter E-Mail Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="register_new_account">Register new account</string>
    <string name="register_screen">Register</string>
    <string name="About">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="about_petspace">About PetSpace</string>
    <string name="return_to_home">Return to Home</string>
    <string name="sign_up_for_a_new_petspace_account">Sign Up for A` New PetSpace Account</string>
    <string name="Friend_Requests">Friend Requests</string>
    <string name="notifications">Notifications</string>
    <string name="enter_user_display_name">Enter Your User Display Name</string>
    <string name="enter_your_country_of_origin">Enter Your Country of Origin</string>
    <string name="enter_full_name">Enter Your Full Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="save">SAVE</string>
    <string name="register_accn">register</string>
    <string name="create_new_account">CREATE ACCOUNT</string>
    <string name="cancel_back">CANCEL</string>
    <string name="cancel">CANCEL</string>
    <string name="username">username</string>
    <string name="back_tomain">BACK</string>
    <string name="enter_your_city_of_origin">city_origin</string>
    <string name="user_name">User Name</string>
    <string name="country">Country</string>
    <string name="full_name">Full Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow_users">follow_users</string>
    <string name="profile_bio">Tell us about yourself and your love for pets!</string>
    <string name="search_for_pet_friends">Find Pet Friends</string>
    <string name="input_placeholder">Type a message..</string>
    <string name="how_are_you_doing_shall_we_zoom_meet_with_the_team_now">How are you doing? Shall we Zoom meet with the Team now?</string>
    <string name="gunther_gustufson">Gunther Gustufson</string>
    <string name="choose_picture_and_send">Choose Picture and Send</string>
    <string name="failure_permission">Failure to obtain permission!</string>
    <string name="permission_not_granted">PERMISSION NOT GRANTED!</string>
    <string name="picture_chosen">Picture is chosen.</string>
    <string name="button_disabled">Choosing a picture disabled</string>
    <string name="intro_text">Choose a picture from the Gallery to send:</string>
    <string name="action_settings">action_settings</string>
    <string name="default_gallery_storage">My Images</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the images when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify image quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">NEU CS5520 MBA - Fall 2020</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.google.com</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.google.com</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.google.com</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings_headers">Settings with Headers</string>
    <string name="pref_description_social_recommendations">pref_description_social_recommendations</string>
    <string name="pref_title_social_recommendations">pref_title_social_recommendations</string>
    <string name="pref_default_display_name">pref_default_display_name</string>
    <string name="pref_title_display_name">pref_title_display_name</string>
    <string name="pref_title_add_friends_to_messages">pref_title_add_friends_to_messages</string>
    <string name="pref_ringtone_silent">pref_ringtone_silent</string>
    <string name="nearby">nearby</string>
    <string name="pref_title_help">Additional Information</string>
    <string name="dogs_chat">Dogs Chat</string>
    <string name="choose_a_chat_forum">Choose A Chat Forum:</string>
    <string name="cats_chat">Cats Chat</string>
    <string name="back_to_main">HOME</string>
    <string name="write_a_message">Write a message</string>
    <string name="whats_on_your_mind_dogs">Whats on your mind?</string>
    <string name="settings">Settings</string>
    <string name="pref_example_list_titles">pref_example_list_titles</string>
    <string name="pref_example_list_values">pref_example_list_values</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="placeholder_message">Placeholder message</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="like_post_btn">Like</string>
    <string name="the_description_of_post">The description of post</string>
    <string name="comment">Comment</string>
    <string name="name">Name</string>
    <string name="_33min">33min</string>
    <string name="share">Share</string>
</resources>