<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAbout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#651FFF"
        android:clickable="true"
        android:elevation="5dp"
        android:hapticFeedbackEnabled="false"
        android:requiresFadingEdge="horizontal"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        android:visibility="visible"
        app:titleTextColor="#FFFFFF" />

    <TextView
        android:id="@+id/enter_email_address_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/enter_the_e_mail_address_associated_with_your_account"
        android:textAlignment="center"

        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/forgot_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:autofillHints=""
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"

        android:padding="15dp"
        android:textSize="14sp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_email"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:text="@string/reset_password"
        android:textColor="@android:color/white"
        android:id="@+id/forgot_button"
        />

    <Button
        android:id="@+id/cancel_back_to_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_button"
        android:layout_marginTop="30dp"
        android:onClick="onClickCancel"
        android:padding="15dp"
        android:text="@string/cancel"
        android:textColor="@android:color/white" />
</RelativeLayout>