<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/uPictureTv"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                android:maxWidth="50dp"
                android:maxHeight="50dp"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/uNameTv"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/uTimeTv"
                    android:text="@string/_33min"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/pContentTv"
            android:text="@string/the_description_of_post"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/pImageTv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/teal_200"
            />
        <TextView
            android:id="@+id/pLikesTv"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/pCommentsTv"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F0F0" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:id="@+id/likebtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/like_post_btn"
                android:textColor="#5E35B1"
                android:visibility="visible" />

            <Button
                android:id="@+id/commentbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/comment"
                android:textColor="#5E35B1" />

            <Button
                android:id="@+id/share_post"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/share"
                android:textColor="#5E35B1" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>