<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_std_img"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ProfileSetupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="173dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp">

        <ImageView
            android:id="@+id/profile_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile"
            tools:srcCompat="@drawable/profile" />

        <ImageButton
            android:id="@+id/add_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="50dp"
            android:background="@android:color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_add_circle_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_img"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/constraint_layout"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="15dp"
        android:drawableStart="@drawable/user_name_at_resize2"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="15dp" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:drawableStart="@drawable/name"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textMultiLine"
        android:padding="15dp" />

    <EditText
        android:id="@+id/city_origin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/full_name"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_location_city_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textMultiLine"
        android:padding="15dp" />

    <EditText
        android:id="@+id/state_origin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/city_origin"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_map_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/state"
        android:inputType="textMultiLine"
        android:padding="15dp" />

    <EditText
        android:id="@+id/country_origin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/state_origin"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_location_searching_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/country"
        android:inputType="textMultiLine"
        android:padding="15dp" />


    <Button
        android:id="@+id/save_profile_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/country_origin"
        android:layout_marginStart="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="15dp"
        android:background="#651FFF"
        android:padding="10dp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/cancel_back_to_main3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/save_profile_info"
        android:layout_marginStart="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="15dp"
        android:background="#651FFF"
        android:onClick="onClickCancel"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="#FFFFFF" />


</RelativeLayout>