<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/catdog" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_icon"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Enter E-Mail Address"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Enter Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textSize="17sp" />


    <Button
        android:id="@+id/login_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#651FFF"
        android:padding="10dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:text="Login" />

    <TextView
        android:id="@+id/register_account_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_account"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_account_link"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:text="@string/or_login_with"
        android:textAlignment="center"
        android:textColor="#000000" />
    <LinearLayout
        android:id="@+id/signin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp"
        android:gravity="center"

        >

        <ImageView
            android:id="@+id/facebook_signin_button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:src="@drawable/facebook"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/twitter_signin_button"
            android:layout_width="125dp"
            android:layout_height="70dp"
            android:src="@drawable/twitter"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/google_signin_button"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:src="@drawable/google"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_below="@id/signin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textColorLink="@android:color/holo_red_dark"
        android:textColor="@android:color/holo_red_dark"
        />
</RelativeLayout>